TRABALHO-INDIVIDUAL-main/.k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2 #Aumenta o número de réplicas para 2
  selector:
    matchLabels:
      app: siae-backend
  template:
    metadata:
      labels:
        app: siae-backend
    spec:
      containers:
      - name: trabalho-individual-main-backend
        image: pedrokadebochado/trabalho-individual-main-backend:latest
        ports:
        - containerPort: 3000++
---
