TRABALHO-INDIVIDUAL-main/.k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels: #OQ É ISSO MSM?
      app: siae-frontend
  template:
    metadata:
      labels:
        app: siae-frontend
    spec:
      containers:
      - name: trabalho-individual-main-frontend
        image: pedrokadebochado/trabalho-individual-main-frontend:latest
        ports:
        - containerPort: 5173
---
