TRABALHO-INDIVIDUAL-main/.k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5174
      nodePort: 30080
