TRABALHO-INDIVIDUAL-main/.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: sistema-ingress
 annotations:
  kubernetes.io/ingress.class: nginx
spec:
 rules:
  - host: sistema.seudominio.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: forntend-service
            port:
              number: 80
        path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
